data/derived/sp14/progs/unify/prog0346.ml.out
Characters 93-97:
  | Average (x', y') -> (eval VarX x' y + eval VarY x y')/2;;
                              ^^^^
Error: This expression has type expr but an expression was expected of type
         expr * ('a -> 'b -> 'c) * ('a -> 'b -> 'c)
